# seq2

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_lexer.rs
src/: _lexer.rs  errors.rs  lexer.rs  lib.rs  parser.rs  tokens.rs
src/tests/: lexer.rs  parser.rs
