[package]
name = "seq2"
version = "0.0.0"
edition = "2021"
description = "A library/program to parse and transform a string of comma separated number to a vector of the said numbers."
authors = ["Kevin Silvester"]
repository = "https://KevinSilvester/seq2"
homepage = "https://KevinSilvester/seq2"
license = "MIT"

[dependencies]
anstyle = "1.0.6"
anyhow = "1.0.80"
indoc = "2.0.4"

[dev-dependencies]
criterion = { version = "0.5.1" }
pretty_assertions = "1.4.0"

[[bench]]
name = "bench_lexer"
harness = false

[profile.release]
strip = true
codegen-units = 1
opt-level = 3
lto = "thin"
